# substrate-api-client

./: .gitignore  Cargo.toml
src/: events.rs  lib.rs  node_metadata.rs
src/examples/: example_benchmark_bulk_xt.rs  example_compose_extrinsic_offline.rs  example_event_callback.rs
src/extrinsic/: xt_primitives.rs
src/rpc/: client.rs
