[package]
name = "substrate-api-client"
version = "2.0.2"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
env_logger      = { version = "0.7", optional = true }
ws              = { version = "0.7", optional = true, features = ["ssl"] }
hex             = { version = "0.4", default-features = false }
log             = { version = "0.4", optional = true }
serde           = { version = "1.0", optional = true, features = ["derive"] }
serde_json      = { version = "1.0", optional = true }
thiserror 		= { version = "1.0", optional =true }
primitive-types = { version = "0.6.1", optional = true, features = ["codec"] }

node-runtime = { git = 'https://github.com/akropolisio/akropolisOS-chain-node', version = '0.5.4', package = 'akropolisos-runtime', branch = 'v2.0.0-alpha.6'}

[dependencies.simple-json]
git = 'https://github.com/jimmychu0807/simple-json'
rev = '49661fd6cf0aed3c9f97d233589d9dd6873827eb'

[dependencies.sp-core]
features = ["full_crypto"]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-core'
version = '2.0.0-dev'

[dependencies.codec]
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.0"

[dependencies.runtime_io]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-dev'
package = "sp-io"

[dependencies.metadata]
git = 'https://github.com/paritytech/substrate.git'
version = '11.0.0-dev'
package = "frame-metadata"

[dependencies.sp-version]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-dev'
package = "sp-version"

[dependencies.balances]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-dev'
package = "pallet-balances"

[dependencies.system]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-dev'
package = "frame-system"

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-dev'

[dependencies.support]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-dev'
package = "frame-support"

[dependencies.indices]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-dev'
package = "pallet-indices"

[dependencies.sp-std]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-dev'
package = "sp-std"

[dev-dependencies]
wabt = "0.9.0"

[dev-dependencies.contracts]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-dev'
package = "pallet-contracts"

[dev-dependencies.keyring]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-dev'
package = "sp-keyring"

[dev-dependencies.clap] 
version = "2.33"
features = ["yaml"] 

[features]
default = ["std"]
std = [
	"sp-core/std",
	"codec/std",
	"runtime_io/std",	
	"metadata/std",
	"sp-version/std",
	"balances/std",
	"system/std",
    "sp-runtime/std",
	"support/std",
	"sp-runtime/std",
	"sp-std/std",
	"serde/std",
	"serde_json",
	"env_logger",
	"log",
	"ws",
	"hex/std",
	"primitive-types",
	"thiserror",
]
# need to add this for the app_crypto macro
full_crypto = []

[[example]]
name = "example_get_storage"
path = "src/examples/example_get_storage.rs"

[[example]]
name = "example_get_blocks"
path = "src/examples/example_get_blocks.rs"

[[example]]
name = "example_transfer"
path = "src/examples/example_transfer.rs"

[[example]]
name = "example_event_callback"
path = "src/examples/example_event_callback.rs"

[[example]]
name = "example_generic_extrinsic"
path = "src/examples/example_generic_extrinsic.rs"

[[example]]
name = "example_print_metadata"
path = "src/examples/example_print_metadata.rs"

[[example]]
name = "example_contract"
path = "src/examples/example_contract.rs"

[[example]]
name = "example_custom_storage_struct"
path = "src/examples/example_custom_storage_struct.rs"

[[example]]
name = "example_compose_extrinsic_offline"
path = "src/examples/example_compose_extrinsic_offline.rs"

[[example]]
name = "example_generic_event_callback"
path = "src/examples/example_generic_event_callback.rs"

[[example]]
name = "example_benchmark_bulk_xt"
path = "src/examples/example_benchmark_bulk_xt.rs"

[[example]]
name = "example_sudo"
path = "src/examples/example_sudo.rs"
